--- a/index-EN.html
+++ b/index-EN.html
@@ -117,7 +117,7 @@
                   <h2>Tracking your order</h2>
               </div>
               <div class="card-body">
-                  <p>You can easily track your order as it is being processed and shipped by us, if you have placed your order through a registered account. You can verify your order by <a href="/account/login">logging into your account</a> and by following the steps below in FAQ. If you have placed your order with a guest account (without creating a registered account), you can follow your order via email only.</p>
+                  <p>You can easily track your order as it is being processed and shipped by us, if you have placed your order through a registered account. You can verify your order by <a href="/account/login">logging into your account</a> and by following the steps below in FAQ. If you have placed your order through a guest account (without creating a registered account), you can track your order via email only.</p>
                   <p>Already know how?</p>
                   <p><a href="/account/login">Connect to your account first!</a></p>
                   <p>Once you place your order, you will receive a confirmation email with your order number. When your order is packed and ready to be picked up by the courier company, you will receive an email with your invoice. You will also receive an email with your tracking number and information on how to track your package. Please add <strong>info@altitude-sports.com</strong> to your email address book so that these important emails do not get lost in your Spam or Trash folder.</p>
@@ -203,7 +203,7 @@
                   <h2>Marketplace orders</h2>
               </div>
               <div class="card-body">
-                  <p>For products sold directly by Marketplace Sellers (see <a href="/pages/marketplace-osprey"><u>Osprey</u></a> seller page), Altitude Sports is not responsible for shipping or delivery.</p>
+                  <p>Altitude Sports is not responsible for shipping or delivery for products sold directly by Marketplace Sellers (see <a href="/pages/marketplace-osprey"><u>Osprey</u></a> and <a href="/pages/marketplace-garneau"><u>Garneau</u></a> seller pages).  </p>
               </div>
           </div>
       </div>
@@ -216,13 +216,13 @@
       </div>
       <div id="accordionReturns" class="accordion">
           <!-- FREE RETURN -->
-          <div class="row no-gutters my-4" style="background: #a6dbd3;">
+          <!--<div class="row no-gutters my-4" style="background: #a6dbd3;">
               <div class="d-none d-md-block col-4" style="background: url('https://cdn.shopify.com/s/files/1/1199/9020/files/bg-free-returns') top right no-repeat; background-size: cover;"></div>
               <div class="col-12 col-md-8 pt-3 px-3"><span class="h3 text-white" style="line-height: 1.2;"><span class="h3 text-white" style="line-height: 1.2;">First-time customer? Receive a free return with your first order<span></span></span>
                   </span>
                   <p>To eliminate all barriers from ordering online, we want to offer you a free return with your first order. Order any product, in the sizes/colours you want to try, and send back free of charge anything you don't want to keep. Applies to orders delivered in Canada. Does not apply on product sold by Marketplace sellers. One prepaid shipping label provided.</p>
               </div>
-          </div>
+          </div>-->
           <!-- END FREE RETURN -->
           <div class="mt-4">
               <div class="row mx-0 easy-return">
@@ -241,9 +241,11 @@
               <div class="row mx-0 easy-return">
                   <div class="col-12 p-3">
                       <!--<p class="h5">We’ll deduct $13 +taxes to cover shipping, or you can <a href="/products/membership">become a lifetime member</a> and get free returns forever (with exceptions to product sold by Marketplace sellers).</p>-->
-                      <p>We’ll deduct $13 +taxes to cover shipping</p>
-                      <p>You can <a href="/products/membership">become a lifetime member</a> and get free returns forever*</p>
-                      <p><a href="#returns">First-time customer? Receive a free return with your first order*</a></p>
+                      <ol>
+                          <li>We’ll deduct $13 +taxes to cover shipping</li>
+                          <li>You can <a href="/products/membership">become a lifetime member</a> and get free returns forever*</li>
+                          <li><a href="#returns">First-time customer? Receive a free return with your first order*</a></li>
+                      </ol>
                       <p><i>* with exceptions to product sold by <a href="pages/help-faq#marketplace">Marketplace</a> sellers.</i></p>
                   </div>
               </div>
@@ -309,7 +311,7 @@
                   <h2>We do reimbursements; not exchanges</h2>
               </div>
               <div class="card-body">
-                  <p>Our experience dictates it's more advantageous for everyone that we do not offer exchanges because it's simpler to reimburse you for returned product. It's quicker and easier to consider each transaction separately, this way you don't need to wait until your refund is complete to order the correct product. If you’d prefer another size or color, simply order that style and send back the unwanted product at your earliest convenience. Placing this second order eliminates the need to wait for your refund to process, and ensures you get the correct product delivered to your door as soon as possible.</p>
+                  <p>Our experience dictates it's more advantageous for everyone that we do not offer exchanges because it's simpler to reimburse you for returned product. It's quicker and easier to consider each transaction separately; this way you don't need to wait until your refund is complete to order the correct product. If you’d prefer another size or color, simply order that style and send back the unwanted product at your earliest convenience. Placing this second order eliminates the need to wait for your refund to process, and ensures you get the correct product delivered to your door as soon as possible.</p>
                   <p><strong>Example:</strong> If you wish to return a jacket in size small because you think the medium will fit better, you should do two things. First, return the small jacket. You’ll be refunded when that process is complete. Second, order the medium jacket, which will be delivered via the usual shipping process.</p>
                   <p><strong>Advice: Order multiple sizes, colors, or styles of the same product.</strong></p>
                   <p>If you're hesitating between sizes, colors, or models, we advise ordering several products so you can compare them, then just return the products you don’t like. This single order will limit your number of transactions and save time, all while ensuring you receive the specific product you want. It also guarantees you'll get the item you want before it sells out.</p>
@@ -399,7 +401,7 @@
               <div class="card-header">
                   <h2>Marketplace Return Guidelines</h2>
               </div>
-              <div class="card-body" id="international-usa-returns">
+              <div class="card-body" id="marketplace-return">
                   <p>To return a product:</p>
                   <ul>
                       <li>If your product was sold and shipped by Altitude Sports, the product must be sent back to Altitude Sports.</li>
@@ -608,7 +610,7 @@
                   <h2>Where should I return product I ordered from a Marketplace seller?</h2>
               </div>
               <div class="card-body">
-                  <p>All products purchased on the Marketplace must be returned directly to the seller, not Altitude Sports. <a href="#marketplace"><u>See the Marketplace Return Guidelines.</u></a></p>
+                  <p>All products purchased on the Marketplace must be returned directly to the seller, not Altitude Sports. <a href="#marketplace-return"><u>See the Marketplace Return Guidelines.</u></a></p>
               </div>
           </div>
           <div class="card">
@@ -731,7 +733,7 @@
               <div class="card-body">
                   <p>You can verify the status of your order if you placed it using your account. If you placed your order as a guest, consult your emails (look at your junk mail as well) to find the password that will allow you to log into your account. Here's how you can verify the status of your order:</p>
                   <ol>
-                      <li><a href="/account/login">Log into your account</a></li>
+                      <li><a href="/account/login" target="_blank">Log into your account</a></li>
                       <li>Acces the section Orders/Refunds</li>
                       <li>Locate your order. You can see the status of your order in the corresponding column</li>
                   </ol>
@@ -870,7 +872,7 @@
           <div>
               <p>Do you have a question or a problem? Get the quickest answer possible by filling out this form:</p>
               <p>
-                  <button class="button _zdContactBtn" data-sendto="https://altitudesports.zendesk.com/hc/en-us/requests/new">Click Here ›</button>
+                  <button class="button _zdContactBtn" data-sendto="https://altitudesports.zendesk.com/hc/en-us/requests/new">Click Here</button>
               </p>
               <p>If you need more information do not hesitate to contact one of our customer service agents using one of the means below:</p>
           </div>
@@ -916,7 +918,7 @@
               <div class="card-body">
                   <p>To speak in person with one of our knowledgeable staff, visit our store in Mont-Tremblant, Quebec.</p>
                   <h4 id="tremblant" style="margin: 0;">Altitude Sports Mont-Tremblant</h4>
-                  <p><a href="https://www.google.ca/maps?q=Altitude+Sport&hl=en&ll=46.117514,-74.582148&spn=0.01535,0.038581&cid=13313788957051999180&gl=CA&t=m&z=15&iwloc=A">Factoreries Tremblant<br />2555, rue de l'Aulnaie, suite 203<br />Mont-Tremblant (Québec)  J8E 0E5</a></p>
+                  <p><a target="_blank" href="https://www.google.ca/maps?q=Altitude+Sport&hl=en&ll=46.117514,-74.582148&spn=0.01535,0.038581&cid=13313788957051999180&gl=CA&t=m&z=15&iwloc=A">Factoreries Tremblant<br />2555, rue de l'Aulnaie, suite 203<br />Mont-Tremblant (Québec)  J8E 0E5</a></p>
                   <p>1 800 729-0322
                       <br />Contact: tremblant@altitude-sports.com
                       <br />Next to the Starbucks on the 117</p>
