--- a/index-EN.html
+++ b/index-EN.html
@@ -340,7 +340,7 @@
                   <h2>Returning defective, damaged, or incorrect product</h2>
               </div>
               <div class="card-body">
-                  <p>It's the customer’s responsibility to thoroughly inspect the condition of their product upon reception. In rare cases, products may be damaged through shipping, arrive defective, or we might have accidentally shipped the incorrect product. If this occurs, it's imperative to contact our customer service within 7-days to inform us of the details. Arrangements will be made to return the defective, damaged, or incorrect product free of charge, and we will allocate the customer a full refund.</p>
+                  <p>It's the customer’s responsibility to thoroughly inspect the condition of their product upon reception. In rare cases, products may be damaged through shipping, arrive defective, or we might have accidentally shipped the incorrect product. If this occurs, it's imperative to contact our customer service within 7 days to inform us of the details. Arrangements will be made to return the defective, damaged, or incorrect product free of charge, and we will allocate the customer a full refund.</p>
                   <p>For information about returning a product under warranty, please see <a href="#warranty">our warranty page</a>.</p>
               </div>
           </div>
@@ -826,7 +826,7 @@
                       <li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/shipping-worldwide.png" alt="Shipped" /> This product can be shipped around the world</li>
                       <li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada-us.png" alt="Shipping to Canada" /> This product can only be shipped to Canada and the United States</li>
                       <li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada.png" alt="Shipping to Canada and the USA" /> This product can only be shipped to Canada</li>
-                      <li>Altitude Sports cannot ship to Europe due to GBPR restrictions</li>
+                      <li><i>NB</i> Altitude Sports cannot ship to Europe due to GBPR restrictions</li>
                   </ul>
                   <p>These icons can be found under the ‘Add to Cart’ button. You can also find them in your shopping basket upon confirmation of your order. </p>
               </div>
