--- a/index-FR.html
+++ b/index-FR.html
@@ -737,8 +737,8 @@
                   <p>Voici un petit lexique pour vous aider à comprendre la signification du statut de votre commande :</p>
                   <ul>
                       <li><em>Payé</em> : Cette commande a été payée en totalité</li>
-                      <li><em>Partiellement remboursé</em> : cette commande détient un ou plusieurs articles ayant été remboursés</li>
-                      <li><em>Remboursé</em> : tous les articles de la commande ont été remboursés et la commande est considérée fermée</li>
+                      <li><em>Partiellement remboursé</em> : Cette commande comprend un ou plusieurs articles ayant été remboursés</li>
+                      <li><em>Remboursé</em> : Tous les articles de la commande ont été remboursés et la commande est considérée fermée</li>
                       <li><em>Livré</em> : Cette commande a été ramassée, emballée et expédiée</li>
                       <li><em>Non livré </em>: Cette commande n'a pas encore été expédiée.</li>
                   </ul>
@@ -820,7 +820,7 @@
                       <li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada-us.png" alt="Canada &amp; US only" style="padding-right: 5px;" />Canada et États-unis seulement</li>
                       <li><img src="https://cdn.shopify.com/s/files/1/1230/9376/t/81/assets/canada.png" alt="Canada only" style="padding-right: 5px;" />Canada seulement</li>
                   </ul>
-                  <p>Altitude Sports ne peut expédier en Europe en raison de la réglementation GBPR.</p>
+                  <p><i>N.B.</i> Altitude Sports ne peut expédier en Europe en raison de la réglementation GBPR.</p>
                   <p>Ces icônes se trouvent sur chaque page de produit, sous le bouton « ajouter au panier ». Vous les retrouverez également dans votre panier d’achats, dans le récapitulatif de votre commande.</p>
               </div>
           </div>
