--- a/index-EN.html
+++ b/index-EN.html
@@ -54,7 +54,7 @@
               <div class="card-body" id="estimatedDelivery">
                   <p>After choosing your preferred shipping method and courier, please check for your estimated delivery time in the first step of your shopping cart.  Estimated delivery information is provided by the courier company. The processing time is already incorporated into the delivery time, but weekends and statutory holidays  are not counted. Within Canada, we guarantee that your delivery will be made by the time indicated. Note that your delivery may arrive before the estimated delivery time provided by the courier company.</p>
                   <p>If your order is shipped within Canada, and it arrives after the estimated delivery indicated on Altitude Sports, as provided by the courier company at the time the order was placed, we will gladly reimburse you the shipping fees you may have paid. Delays to orders due to circumstances out of our control, such as snowstorms, hurricanes, credit card verification procedures or postal strikes, will not be counted against the allocated time for delivery.</p>
-                  <p>For deliveries to the United States, and other countries around the world, the estimated delivery time cannot be guaranteed by Altitude Sports. Due to the fact courier companies sub-contract shipments to local companies, and the unknown variable of customs processing times, delivery times can be unpredictable and in rare instances delayed. For more information concerning this subject, please read the following section.</p>
+                  <p>For deliveries to the United States, and other countries around the world, the estimated delivery time cannot be guaranteed by Altitude Sports. Due to the fact courier companies sub-contract shipments to local companies, and the unknown variable of customs processing times, delivery times can be unpredictable and in rare instances delayed. For more information concerning this subject, please read the <a href="#shipping_13">following section.</a></p>
               </div>
           </div>
           <div class="card">
@@ -241,12 +241,9 @@
               <div class="row mx-0 easy-return">
                   <div class="col-12 p-3">
                       <!--<p class="h5">We’ll deduct $13 +taxes to cover shipping, or you can <a href="/products/membership">become a lifetime member</a> and get free returns forever (with exceptions to product sold by Marketplace sellers).</p>-->
-                      <ol>
-                          <li>We’ll deduct $13 +taxes to cover shipping</li>
-                          <li>You can <a href="/products/membership">become a lifetime member</a> and get free returns forever*</li>
-                          <li><a href="#returns">First-time customer? Receive a free return with your first order*</a></li>
-                      </ol>
-                      <p><i>* with exceptions to product sold by <a href="pages/help-faq#marketplace">Marketplace</a> sellers.</i></p>
+                      <p>We’ll deduct $13 +taxes to cover shipping. You can <a href="/products/membership">become a lifetime member</a> and get free returns forever*</p>
+                      <p><a href="#first-time">First-time customer? Receive a free return with your first order*.</a></p>
+                      <p><i>* with exceptions to product sold by <a href="#marketplace">Marketplace</a> sellers.</i></p>
                   </div>
               </div>
           </div>
@@ -278,7 +275,7 @@
             <div class="card-header">
                 <h2>First-time customer? Receive a free return with your first order</h2>
             </div>
-            <div class="card-body">
+            <div class="card-body" id="first-time">
                 <p>To eliminate all barriers from ordering online, we want to offer you a free return with your first order. Order any product, in the sizes/colours you want to try, and send back free of charge anything you don't want to keep. Applies to orders delivered in Canada. Does not apply on product sold by Marketplace sellers. One prepaid shipping label provided.</p>
             </div>
           </div>
@@ -578,7 +575,7 @@
       <div id="accordionMarketplace" class="accordion">
           <div>
               <p class="mt-0">Altitude Sports Marketplace offers our familiar shopping experience but with a more extensive selection from curated top sellers.</p>
-              <p>Discover Altitude Sports Marketplace seller <a href="/pages/marketplace-osprey"><u>Osprey</u></a> and <a href="/pages/marketplace-garneau"><u>Garneau</u></a>.</p>
+              <p>Discover Altitude Sports Marketplace sellers <a href="/pages/marketplace-osprey"><u>Osprey</u></a> and <a href="/pages/marketplace-garneau"><u>Garneau</u></a>.</p>
               <p style="margin-top: 2.25rem;">Below are frequently asked questions:</p>
           </div>
           <div class="card">
@@ -734,16 +731,16 @@
                   <p>You can verify the status of your order if you placed it using your account. If you placed your order as a guest, consult your emails (look at your junk mail as well) to find the password that will allow you to log into your account. Here's how you can verify the status of your order:</p>
                   <ol>
                       <li><a href="/account/login" target="_blank">Log into your account</a></li>
-                      <li>Acces the section Orders/Refunds</li>
+                      <li>Access the section Orders/Refunds</li>
                       <li>Locate your order. You can see the status of your order in the corresponding column</li>
                   </ol>
                   <p>Below is a list of possible order status, and their meaning:</p>
                   <ul>
-                      <li><em><strong>Paid</strong></em> : This order has been paid in full</li>
-                      <li><em><strong>Partially refunded</strong></em> : This order has had one or more items refunded while at least one remains paid</li>
-                      <li><em><strong>Refunded</strong></em> : This order has been refunded in full and is considered closed</li>
-                      <li><em><strong>Fulfilled</strong></em> : This order has been picked, packed and shipped</li>
-                      <li><em><strong>Unfulfilled</strong></em> : This order has not been shipped yet</li>
+                      <li><em><strong>Paid</strong></em>: This order has been paid in full</li>
+                      <li><em><strong>Partially refunded</strong></em>: This order has had one or more items refunded while at least one remains paid</li>
+                      <li><em><strong>Refunded</strong></em>: This order has been refunded in full and is considered closed</li>
+                      <li><em><strong>Fulfilled</strong></em>: This order has been picked, packed and shipped</li>
+                      <li><em><strong>Unfulfilled</strong></em>: This order has not been shipped yet</li>
                   </ul>
               </div>
           </div>
@@ -872,7 +869,7 @@
           <div>
               <p>Do you have a question or a problem? Get the quickest answer possible by filling out this form:</p>
               <p>
-                  <button class="button _zdContactBtn" data-sendto="https://altitudesports.zendesk.com/hc/en-us/requests/new">Click Here</button>
+                  <button style="border: 1px solid #000;" class="button _zdContactBtn" data-sendto="https://altitudesports.zendesk.com/hc/en-us/requests/new">Click Here</button>
               </p>
               <p>If you need more information do not hesitate to contact one of our customer service agents using one of the means below:</p>
           </div>
@@ -882,7 +879,7 @@
               </div>
               <div class="card-body">
                   <p>To initiate a chat with us, you can simply click on the icon in the bottom right corner of your screen:</p>
-                  <p><img src="//cdn.shopify.com/s/files/1/1230/9376/files/zendesk_chat_logo_large.PNG?v=1490110571" /></p>
+                  <p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-EN.png" /></p>
                   <p>Our staff is available to chat Monday – Friday, 9am – 10pm, Saturday, 10am – 6pm and Sunday, 12pm –10pm ET.</p>
                   <p>During Black Friday, <strong>from November 19 to November 26</strong>, our staff will be available from 9am - 12:30am ET. Normal hours will be back in effect on Tuesday, November 27.</p>
                   <p><em>* Please note that the icon will change to "Help" when our chat service is not available, simply use the form by clicking on it to send us a request instead.</em></p>
