--- a/index-FR.html
+++ b/index-FR.html
@@ -54,7 +54,7 @@
               <div class="card-body" id="estimatedDelivery">
                   <p>Vous obtenez le délai de livraison prévu au moment de choisir la méthode et la compagnie de livraison, dès la première étape lorsque vous complétez votre panier d'achats. L'information sur les délais de livraison est fournie par les compagnies de livraison. Ces délais tiennent compte du temps de traitement de votre commande. Notez que les jours ouvrables et les fins de semaine ne sont pas comptés dans le délai de livraison estimé. Au Canada, Altitude Sports s'engage à vous livrer votre colis dans les délais indiqués. Veuillez noter qu'il se peut que votre colis arrive avant le délai prévu par la compagnie de livraison.</p>
                   <p>Pour une livraison au Canada, si le colis arrive après le délai indiqué sur Altitude Sports, établie par la compagnie de livraison au moment ou vous avez passé votre commande, Altitude Sports s'engage à rembourser les frais de livraison payés par le client. Des retards causés par des circonstances hors de notre contrôle peuvent subvenir. Altitude Sports ne se porte pas responsable des retards causés par ce type d'événement.</p>
-                  <p>Pour les livraisons aux États-Unis ou ailleurs dans le monde, le délai prévu constitue une estimation, mais ne peut être garantie par Altitude Sports. La sous-traitance à des compagnies de postes locales et les délais de traitement des douanes peuvent rallonger les délais prévus. Pour plus d’information à ce sujet, veuillez consulter la sous-section.</p>
+                  <p>Pour les livraisons aux États-Unis ou ailleurs dans le monde, le délai prévu constitue une estimation, mais ne peut être garantie par Altitude Sports. La sous-traitance à des compagnies de postes locales et les délais de traitement des douanes peuvent rallonger les délais prévus. Pour plus d’information à ce sujet, veuillez consulter <a href="#shipping_13">la sous-section.</a></p>
               </div>
           </div>
           <div class="card">
@@ -129,7 +129,7 @@
               </div>
               <div class="card-body">
                   <p>Altitude Sports fait confiance à Postes Canada et à FedEx pour livrer vos commandes. Nous croyons que ces compagnies proposent l’offre la plus complète et le service le plus rapide pour nos clients et pour nous.</p>
-                  <p>Pour savoir quelle méthode de livraison vous convient le mieux, veuillez suivre les instructions suivante:</p>
+                  <p>Pour savoir quelle méthode de livraison vous convient le mieux, veuillez suivre les instructions suivantes:</p>
                   <p><strong>1.</strong> Une fois rendu à la caisse dans la section Livraison, vous pourrez sélectionner la compagnie de livraison de votre choix tout en voyant les différents coûts d’envoi.</p>
                   <p><strong>2.</strong> Veuillez noter que seul Postes Canada peut livrer dans une boîte postale.</p>
               </div>
@@ -240,12 +240,9 @@
               </div>
               <div class="row mx-0 easy-return">
                   <div class="col-12 p-3">
-                    <ol>
-                      <li>Nous allons déduire 13 $ plus les taxes du montant de votre remboursement pour couvrir les frais de retour.</li>
-                      <li>Vous pouvez également <a href="/products/membership">devenir membre à vie</a> afin de bénéficier des retours gratuits*</li>
-                      <li><a href="#returns">Nouveau client? Profitez du retour gratuit sur votre première commande*</a></li>
-                    </ol>
-                    <p><i>* non applicable pour les articles provenant des vendeurs de la Place de marché.</i></p>
+                    <p>Nous allons déduire 13 $ plus les taxes du montant de votre remboursement pour couvrir les frais de retour. Vous pouvez également <a href="/products/membership">devenir membre à vie</a> afin de bénéficier des retours gratuits*.</p>
+                    <p><a href="#first-time">Nouveau client? Profitez du retour gratuit sur votre première commande*</a></p>
+                    <p><i>* non applicable pour les articles provenant des vendeurs de la <a href="#marketplace">Place de marché.</a></i></p>
                   </div>
               </div>
           </div>
@@ -277,7 +274,7 @@
               <div class="card-header">
                   <h2>Nouveau client? Profitez du retour gratuit sur votre première commande</h2>
               </div>
-              <div class="card-body">
+              <div class="card-body" id="first-time">
                   <p>Pour vous simplifier la vie, nous offrons le retour gratuit sur votre toute première commande. Commandez n’importe quel produit, dans les couleurs et grandeurs de votre choix, et retournez à nos frais les articles que vous ne désirez pas conserver. S’applique sur les commandes livrées au Canada seulement. Non applicable pour les articles provenant des vendeurs de la Place de marché. Un seul bordereau de retour fourni.</p>
               </div>
           </div>
@@ -789,7 +786,7 @@
               </div>
               <div class="card-body">
                   <p>Pour valider que votre futur achat se qualifie pour l'envoi gratuit à l'adresse souhaitée, vous n'avez qu'à ajouter le ou les produits souhaités dans votre panier d'achats. À la première étape de votre panier d'achats, vous pouvez obtenir une estimation des frais d'envoi pour l'ensemble des méthodes de livraison disponibles en entrant le pays, la province et le code postal d'envoi. Cliquez ensuite sur « Obtenir une estimation ». En quelques secondes, un menu nommé « Sélectionnez une méthode de livraison » déroulant apparaîtra sous ce bouton avec toutes les options disponibles, leur date d'arrivée et leur coût respectif. Vous pourrez ainsi voir si votre futur achat se qualifie pour la livraison standard gratuite avec FedEx et/ou Postes Canada.</p>
-                  <p>Si les méthodes standards présentent certains frais, cela est dû soit à l'adresse de livraison, à la dimension ou au poids exceptionnels de votre commande. Altitude Sports tente de minimiser ces surcharges au maximum en négociant les meilleurs taux avec les compagnies de livraison et en assumant quand même la majorité des frais d'envoi pour ce type de situation. Le Canada étant un pays très vaste, une limite doit toutefois être établie pour que ces activités commerciales demeurent viables à long terme.Nous vous remercions de votre compréhension.</p>
+                  <p>Si les méthodes standards présentent certains frais, cela est dû soit à l'adresse de livraison, à la dimension ou au poids exceptionnels de votre commande. Altitude Sports tente de minimiser ces surcharges au maximum en négociant les meilleurs taux avec les compagnies de livraison et en assumant quand même la majorité des frais d'envoi pour ce type de situation. Le Canada étant un pays très vaste, une limite doit toutefois être établie pour que ces activités commerciales demeurent viables à long terme. Nous vous remercions de votre compréhension.</p>
                   <p>Veuillez noter que les retours gratuits ne s’appliquent pas sur les commandes provenant d’un vendeur de la <a href="#marketplace">Place de marché</a>.</p>
               </div>
           </div>
@@ -866,7 +863,7 @@
           <div>
               <p>Vous avez une question ou un problème? Obtenez la réponse la plus rapide possible en remplissant ce formulaire :</p>
               <p>
-                  <button class="button _zdContactBtn" data-sendto="https://altitudesports.zendesk.com/hc/fr/requests/new">Cliquer ici</button>
+                  <button style="border: 1px solid #000;" class="button _zdContactBtn" data-sendto="https://altitudesports.zendesk.com/hc/fr/requests/new">Cliquer ici</button>
               </p>
               <p>Si vous avez besoin d'un complément d'information ou de conseils, n'hésitez pas à contacter un de nos conseillers au service à la clientèle d'une des manières suivantes :</p>
           </div>
@@ -876,7 +873,7 @@
               </div>
               <div class="card-body">
                   <p>Pour faire une demande de clavardage avec nous, vous pouvez simplement cliquer sur l’icône dans le coin droit au bas de votre écran :</p>
-                  <p><img src="//cdn.shopify.com/s/files/1/1230/9376/files/zendesk_clavardage_logo_large.PNG?v=1490110709" /></p>
+                  <p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-FR.png" /></p>
                   <p>Des conseillers au service à la clientèle sont disponibles pour le clavardage du lundi au vendredi, de 9 h à 22 h, samedi, de 10 h à 18 h et dimanche, de 12 h à 22 h HE.</p>
                   <p>Pendant le Vendredi fou, <strong> du 19 au 26 novembre</strong> , nos conseillers seront disponible de 9h à 12h30 HE. Les heures régulières seront de retour dès le mardi 27 novembre.</p>
                   <p><em>* Veuillez noter que l'icône changera à « Aide » si notre service de clavardage n'est pas disponible. Cliquez sur celui-ci et utiliser le formulaire pour nous envoyer une demande.</em></p>
