--- a/index-EN.html
+++ b/index-EN.html
@@ -881,7 +881,7 @@
                   <p>To initiate a chat with us, you can simply click on the icon in the bottom right corner of your screen:</p>
                   <p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-EN.png" /></p>
                   <p>Our staff is available to chat Monday – Friday, 9am – 10pm, Saturday, 10am – 6pm and Sunday, 12pm –10pm ET.</p>
-                  <p>During Black Friday, <strong>from November 19 to November 26</strong>, our staff will be available from 9am - 12:30am ET. Normal hours will be back in effect on Tuesday, November 27.</p>
+                  <p>During Black Friday, from November 19 to November 26, our staff will be available from 9am - 12:30am ET. Normal hours will be back in effect on Tuesday, November 27.</p>
                   <p><em>* Please note that the icon will change to "Help" when our chat service is not available, simply use the form by clicking on it to send us a request instead.</em></p>
               </div>
           </div>
@@ -894,7 +894,7 @@
                       <br />North America: 1 800 729-0322
                       <br />Outside of North America: 1 514 495-1111</p>
                   <p>Our staff is available to answer calls Monday to Friday, 9am to 10pm; Saturday, 10am to 6pm; and Sunday, 12pm to 10pm.</p>
-                  <p>During Black Friday, <strong>from November 19 to November 26</strong>, our staff will be available from 9am - 12:30am ET. Normal hours will be back in effect on Tuesday, November 27.</p>
+                  <p>During Black Friday, from November 19 to November 26, our staff will be available from 9am - 12:30am ET. Normal hours will be back in effect on Tuesday, November 27.</p>
                   <p>Please note all operations are in Eastern Standard Time.</p>
                   <p>Altitude Sports will return calls with a maximum delay of one to two business days if you leave a message via voice mail.</p>
               </div>
