--- a/index-FR.html
+++ b/index-FR.html
@@ -875,7 +875,7 @@
                   <p>Pour faire une demande de clavardage avec nous, vous pouvez simplement cliquer sur l’icône dans le coin droit au bas de votre écran :</p>
                   <p><img src="https://cdn.shopify.com/s/files/1/1230/9376/files/chat-capture-FR.png" /></p>
                   <p>Des conseillers au service à la clientèle sont disponibles pour le clavardage du lundi au vendredi, de 9 h à 22 h, samedi, de 10 h à 18 h et dimanche, de 12 h à 22 h HE.</p>
-                  <p>Pendant le Vendredi fou, <strong> du 19 au 26 novembre</strong> , nos conseillers seront disponible de 9h à 12h30 HE. Les heures régulières seront de retour dès le mardi 27 novembre.</p>
+                  <p>À l'occasion du Vendredi fou, du 19 au 26 novembre, nos conseillers seront disponibles de 9 h à 00 h 30 HE. Le retour aux heures régulières se fera dès le mardi 27 novembre.</p>
                   <p><em>* Veuillez noter que l'icône changera à « Aide » si notre service de clavardage n'est pas disponible. Cliquez sur celui-ci et utiliser le formulaire pour nous envoyer une demande.</em></p>
               </div>
           </div>
@@ -890,7 +890,7 @@
                   <p>Des conseillers au service à la clientèle prennent les appels du lundi au vendredi, de 9 h à 22 h, le samedi de 10 h à 18 h et le dimanche de 12 h à 22 h.</p>
                   <p>Prendre note que nos heures d’opérations sont basées sur l’heure de l’Est.</p>
                   <p>Altitude Sports s'engage à vous rappeler dans un délai de 1 à 2 jours ouvrables maximum si vous laissez un message sur la boîte vocale.</p>
-                  <p>Pendant le Vendredi fou, <strong> du 19 au 26 novembre </strong>, nos conseillers seront disponible de 9h à 12h30 HE. Les heures régulières seront de retour dès le mardi 27 novembre.</p>
+                  <p>À l'occasion du Vendredi fou, du 19 au 26 novembre, nos conseillers seront disponibles de 9 h à 00 h 30 HE. Le retour aux heures régulières se fera dès le mardi 27 novembre.</p>
               </div>
           </div>
           <div class="card">
